# aws_wrapper

./: .gitignore  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
aws_wrapper/s3/: __init__.py  s3_client.py  s3_pandas.py
s3/: __init__.py  aws_client.py  aws_pandas.py
s3/client/: aws_client.py
s3/client_pandas/: aws_pandas.py
s3/test/: aws.ipynb
