[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws_wrapper"
version = "0.0.1"
authors = [
    {name = "Luis Teodoro"},
]
description = "A simple python package that itegrates with AWS."
requires-python = ">=3.10"
dependencies = [
    "boto3==1.34.109",
    "pandas==2.2.2",
    "python-dotenv==1.0.1",
    "pyarrow==16.1.0",
    "tqdm==4.66.4",
]

[tool.hatch.build.targets.wheel]
packages = ["aws_wrapper"]