[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws_wrapper"
version = "0.0.1"
authors = [
    {name = "Luis Teodoro"},
]
description = "A simple python package that itegrates with AWS."
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.3,<2",
    "pandas>=2.0.0,<3",
    "python-dotenv>=1,<2",
    "pyarrow>=16,<18",
    "tqdm>=3,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["aws_wrapper"]